I added text to the file

--- a/algenbekaempfung.html
+++ b/algenbekaempfung.html
@@ -37,7 +37,7 @@
                     auftretendes Problem. Vor allem gedämmte und mit Kunststoffanteilen beschichtete Fassaden sind
                     betroffen, speziell in der Nähe von Bäumen oder Wasserflächen. </p>
 
-                <div class="grid md:grid-cols-2 grid-cols-1 gap-16 mt-6">
+                <div class="grid md:grid-cols-2 grid-cols-1 md:gap-16 gap-6 mt-6">
 
                     <div class="text-[#4f4856]">
 
