--- a/beschichtungssysteme.html
+++ b/beschichtungssysteme.html
@@ -36,7 +36,7 @@
                 <p class="text-[#4f4856] mt-8">Für die Fassaden gibt es im Grunde sieben verschiedene
                     Beschichtungssysteme:</p>
 
-                <div class="grid md:grid-cols-2 grid-cols-1 gap-16 mt-6">
+                <div class="grid md:grid-cols-2 grid-cols-1 md:gap-16 gap-6 mt-6">
 
                     <div class=" text-[#4f4856]">
                         <ul class="space-y-1 list-disc pl-5">
@@ -104,7 +104,7 @@
                     </p>
                 </div>
 
-                <div class="grid md:grid-cols-2 grid-cols-1 gap-16 mt-6">
+                <div class="grid md:grid-cols-2 grid-cols-1 md:gap-16 gap-6 mt-6">
 
                     <div class=" text-[#4f4856]">
                         <h2 class="font-semibold pb-2">Rissüberbrückung mit Armierung
