--- a/graffitibekaempfung.html
+++ b/graffitibekaempfung.html
@@ -34,7 +34,7 @@
                 </div>
                 <h2 class="md:text-4xl text-xl mt-10 italic text-[#4f4856]">Graffitibekämpfung</h2>
 
-                <div class="grid md:grid-cols-2 grid-cols-1 gap-16 mt-6">
+                <div class="grid md:grid-cols-2 grid-cols-1 md:gap-16 gap-6 mt-6">
 
                     <div class="text-[#4f4856]">
 
@@ -50,7 +50,7 @@
                 </div>
                 <div class="w-full border-b border-zinc-300 md:my-10 my-5"></div>
 
-                <div class="grid md:grid-cols-3 grid-cols-1 gap-16 mt-6">
+                <div class="grid md:grid-cols-3 grid-cols-1 md:gap-16 gap-6 mt-6">
 
                     <div class="text-[#4f4856]">
 
