--- a/pruefmethoden.html
+++ b/pruefmethoden.html
@@ -38,7 +38,7 @@
                     Ausführung und die Auswahl der Produkte. Neben unterschiedlichen Bausubstanzen variiert auch die
                     Beschaffenheit der Untergründe. </p>
 
-                <div class="grid md:grid-cols-2 grid-cols-1 gap-16 mt-6">
+                <div class="grid md:grid-cols-2 grid-cols-1 md:gap-16 gap-6 mt-6">
 
                     <p class="text-[#4f4856]">
                         Jede erfolgreiche Fassadensanierung beginnt mit einer fachkundigen Prüfung. Handelt es sich um
