--- a/putzarbeiten-rissursachen.html
+++ b/putzarbeiten-rissursachen.html
@@ -34,7 +34,7 @@
                 </div>
                 <h2 class="md:text-4xl text-xl mt-10 italic text-[#4f4856]">Putzarbeiten / Rissursachen</h2>
 
-                <div class="grid md:grid-cols-2 grid-cols-1 gap-16 mt-6">
+                <div class="grid md:grid-cols-2 grid-cols-1 md:gap-16 gap-6 mt-6">
 
                     <p class="text-[#4f4856]">
                         Zu jeder Fassadensanierung gehören im großen oder kleinen Umfang auch Putzarbeiten.
@@ -50,7 +50,7 @@
 
 
                 <h2 class="md:text-3xl text-xl italic text-[#4f4856]">Risse</h2>
-                <div class="grid md:grid-cols-3 grid-cols-1 gap-16 mt-4">
+                <div class="grid md:grid-cols-3 grid-cols-1 md:gap-16 gap-6 mt-4">
 
                     <div class="text-[#4f4856] md:col-span-2">
                         <p>Risse im Putz lassen sich grundsätzlich in drei Gruppen einteilen.</p>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="w-full border-b border-zinc-300 md:my-10 my-5"></div>
 
-                <div class="grid md:grid-cols-2 grid-cols-1 gap-16 mt-6">
+                <div class="grid md:grid-cols-2 grid-cols-1 md:gap-16 gap-6 mt-6">
 
                     <div class="text-[#4f4856]">
                         <h2 class="font-semibold pb-3">2. Putzträgerbedingte Risse</h2>
