--- a/rissarmierung.html
+++ b/rissarmierung.html
@@ -34,7 +34,7 @@
                 </div>
                 <h2 class="md:text-4xl text-xl mt-5 italic text-[#4f4856]">Rissarmierung</h2>
 
-                <div class="grid md:grid-cols-2 grid-cols-1 gap-16 mt-6">
+                <div class="grid md:grid-cols-2 grid-cols-1 md:gap-16 gap-6 mt-6">
 
                     <div class="">
                         <p class="text-[#4f4856]">
