--- a/stucksanierung-fassaden-berlin.html
+++ b/stucksanierung-fassaden-berlin.html
@@ -34,7 +34,7 @@
                 </div>
                 <h2 class="md:text-4xl text-xl mt-10  italic text-[#4f4856]">Stucksanierung an Fassaden in Berlin</h2>
 
-                <div class="grid md:grid-cols-2 grid-cols-1 gap-16 mt-12">
+                <div class="grid md:grid-cols-2 grid-cols-1 md:gap-16 gap-6 mt-12">
                     <div class="text-[#4f4856]">
                         <h2 class="font-semibold pb-2">Schutz und Schönheit für Ihre Fassade</h2>
                         <p class="pb-5">
