--- a/Detailinformationen-zu-Balkonabdichtungen.html
+++ b/Detailinformationen-zu-Balkonabdichtungen.html
@@ -35,7 +35,7 @@
                 <h2 class="md:text-4xl text-xl mt-10 italic text-[#4f4856]">Detailinformationen zu Balkonabdichtungen
                 </h2>
 
-                <div class="grid md:grid-cols-2 grid-cols-1 gap-16 mt-6">
+                <div class="grid md:grid-cols-2 grid-cols-1 md:gap-16 gap-6 mt-6">
 
                     <div class="text-[#4f4856]">
 
@@ -52,7 +52,7 @@
                 </div>
                 <div class="w-full border-b border-zinc-300 md:my-10 my-5"></div>
 
-                <div class="grid md:grid-cols-3 items-center grid-cols-1 gap-16 mt-6">
+                <div class="grid md:grid-cols-3 items-center grid-cols-1 md:gap-16 gap-6 mt-6">
 
                     <div class="text-[#4f4856] md:col-span-2">
 
@@ -76,7 +76,7 @@
                     Boden und an den Anschlussfugen vorhanden sind.
                     Daran hapert es aber bei ca. 80 % aller Böden.</p>
 
-                <div class="grid md:grid-cols-2 grid-cols-1 gap-16 mt-6">
+                <div class="grid md:grid-cols-2 grid-cols-1 md:gap-16 gap-6 mt-6">
                     <div class="text-[#4f4856]">
                         <p>Deshalb versucht man seit Jahrzehnten mit allen möglichen Beschichtungssystemen oder mit
                             Fliesen das Eindringen von Wasser in die Böden zu verhindern. Allerdings mit langfristig
@@ -101,7 +101,7 @@
 
                 <div class="w-full border-b border-zinc-300 md:my-10 my-5"></div>
 
-                <div class="grid md:grid-cols-2 grid-cols-1 gap-16 mt-6">
+                <div class="grid md:grid-cols-2 grid-cols-1 md:gap-16 gap-6 mt-6">
 
                     <div class="text-[#4f4856]">
                         <h2 class="md:text-3xl text-xl pb-4">Variante 1 (Kunstharzbeschichtung)</h2>
