--- a/ausbildung.html
+++ b/ausbildung.html
@@ -34,7 +34,7 @@
                     Berlin Brandenburg
                 </h2>
 
-                <div class="grid md:grid-cols-2 grid-cols-1 gap-16 mt-6">
+                <div class="grid md:grid-cols-2 grid-cols-1 md:gap-16 gap-6 mt-6">
 
                     <p class="text-[#4f4856]">
                         <strong>Ausbildung</strong> ist und bleibt auch in Zukunft für uns ein wichtiger Teil der
