--- a/beschreibung-der-problemfelder.html
+++ b/beschreibung-der-problemfelder.html
@@ -49,7 +49,7 @@
                     </ul>
                 </div>
 
-                <div class="grid md:grid-cols-2 grid-cols-1 gap-16 mt-6">
+                <div class="grid md:grid-cols-2 grid-cols-1 md:gap-16 gap-6 mt-6">
 
 
                     <div class="text-[#4f4856]">
