--- a/maler-tapezierarbeiten-berlin-brandenburg.html
+++ b/maler-tapezierarbeiten-berlin-brandenburg.html
@@ -36,7 +36,7 @@
                     Berlin Brandenburg
                 </h2>
 
-                <div class="grid md:grid-cols-2 grid-cols-1 gap-16 mt-6">
+                <div class="grid md:grid-cols-2 grid-cols-1 md:gap-16 gap-6 mt-6">
 
                     <div class="text-[#4f4856]">
 
