--- a/putzsanierung.html
+++ b/putzsanierung.html
@@ -34,7 +34,7 @@
                 </div>
                 <h2 class="md:text-4xl text-xl mt-10  italic text-[#4f4856]">Putzsanierung Berlin Brandenburg</h2>
 
-                <div class="grid md:grid-cols-2 grid-cols-1 gap-16 mt-12">
+                <div class="grid md:grid-cols-2 grid-cols-1 md:gap-16 gap-6 mt-12">
                     <div class="text-[#4f4856]">
                         <h2 class="font-semibold pb-2">Schutz und Schönheit für Ihre Fassade</h2>
                         <p class="pb-5">
@@ -80,7 +80,7 @@
                 </div>
                 <div class="w-full border-b border-zinc-300 md:my-10 my-5"></div>
 
-                <div class="grid md:grid-cols-2 grid-cols-1 gap-16">
+                <div class="grid md:grid-cols-2 grid-cols-1 md:gap-16 gap-6">
                     <div class="text-[#4f4856]">
                         <h2 class="font-semibold pb-2">Putzsanierung: Schritt für Schritt
 
@@ -123,7 +123,7 @@
                 </div>
                 <div class="w-full border-b border-zinc-300 md:my-10 my-5"></div>
 
-                <div class="grid md:grid-cols-2 grid-cols-1 gap-16 items-center">
+                <div class="grid md:grid-cols-2 grid-cols-1 md:gap-16 gap-6 items-center">
                     <div class="text-[#4f4856]">
                         <h2 class="font-semibold pb-2">Fazit</h2>
                         <p class="pb-5">
@@ -136,7 +136,7 @@
                 </div>
                 <div class="w-full border-b border-zinc-300 md:my-10 my-5"></div>
 
-                <div class="grid md:grid-cols-2 grid-cols-1 gap-16">
+                <div class="grid md:grid-cols-2 grid-cols-1 md:gap-16 gap-6">
                     <div class="text-[#4f4856]">
                         <h2 class="font-semibold pb-2">Altbausanierung</h2>
                         <p class="pb-5">
@@ -179,7 +179,7 @@
 
 
                 <div class="w-full border-b border-zinc-300 md:my-10 my-5"></div>
-                <div class="grid md:grid-cols-2 grid-cols-1 gap-16">
+                <div class="grid md:grid-cols-2 grid-cols-1 md:gap-16 gap-6">
                     <div class="text-[#4f4856]">
                         <h2 class="font-semibold pb-2">Glattputz</h2>
                         <p class="pb-5">
