I added text to the file

--- a/arbeitsschritte.html
+++ b/arbeitsschritte.html
@@ -126,8 +126,8 @@
                         <img src="/Docs/Assets/Images/arbeitsschritte/img7.webp" class="w-full rounded-md" alt="">
                         <p class="text-[#4f4856] pt-4">Schützenstr. 21-21a / Rugestr., 12165 Berlin-Steglitz
                             Altbausanierung, Betoninstandsetzung
-                            
-                            </p>
+
+                        </p>
                     </div>
                     <div class="">
                         <img src="/Docs/Assets/Images/arbeitsschritte/img8.webp" class="w-full rounded-md" alt="">
@@ -162,17 +162,21 @@
             </div>
             <div class="lg:max-w-[30%] w-full flex flex-col gap-5">
 
-                <div class=" rounded-md">
-                    <div
-                        class="flex transition-all bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Arbeitsschritte </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div
-                        class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Detailinformationen zur Betonsanierung </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
+                <div class=" rounded-md overflow-hidden">
+                    <a href="/arbeitsschritte.html">
+                        <div
+                            class="flex transition-all bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Arbeitsschritte </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
+                    <a href="/detailinformationen-zur-betonsanierung.html">
+                        <div
+                            class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Detailinformationen zur Betonsanierung </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
                 </div>
 
                 <div class=" rounded-md overflow-hidden borderWidth2 relative text-black w-full bg-[#f8a322] p-7">
