--- a/beschichtungssysteme.html
+++ b/beschichtungssysteme.html
@@ -112,7 +112,8 @@
                         <p class="pb-5">Bei stark rissigen Putzen können elastische Anstriche schnell überfordert sein.
                             Dann empfiehlt es sich einen Unterputz mit Gewebeeinlage aufzuziehen und anschließend zu
                             streichen oder zu verputzen. <br>
-                            Mehr dazu im Bereich <a href="" class="hover:underline text-[#f8a322]">Rissarmierung</a>.</p>
+                            Mehr dazu im Bereich <a href="" class="hover:underline text-[#f8a322]">Rissarmierung</a>.
+                        </p>
                     </div>
                     <div class=" text-[#4f4856]">
                         <h2 class="font-semibold pb-2">Anti-Graffiti-Beschichtung</h2>
@@ -120,8 +121,9 @@
                             wesentlich einfacher. <br>
                             Leider sind diese Systeme sehr dicht und können auf lange Sicht den Putz zerstören.
                             Durch Ihre sehr hohen Materialkosten sind Sie nur bei stark beanspruchten Flächen zu
-                            empfehlen. <br> 
-                            Mehr dazu im Bereich <a href="" class="hover:underline text-[#f8a322]">Graffitibekämpfung</a>.</p>
+                            empfehlen. <br>
+                            Mehr dazu im Bereich <a href=""
+                                class="hover:underline text-[#f8a322]">Graffitibekämpfung</a>.</p>
                     </div>
 
                 </div>
@@ -175,59 +177,65 @@
             </div>
             <div class="lg:max-w-[30%] w-full flex flex-col gap-5">
 
-                <div class=" rounded-md">
-                    <div
-                        class="flex transition-all bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Everything from one source  </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div
-                        class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Schnelldienst (fahrende Werkstätten) </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div
-                        class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Kostenfreie Aufmasserstellung </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div
-                        class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Farbgestaltung Oder Farbmuster </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div
-                        class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Fensterwartungsverträge </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div
-                        class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Beratung für eine optimale Sanierung </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div
-                        class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Pauschalfestpreise </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div
-                        class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Hausmeisterverträge </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
+                <div class=" rounded-md overflow-hidden">
+                    <a href="/beschichtungssysteme.html">
+                        <div
+                            class="flex transition-all bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Beschichtungssysteme </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
+                    <a href="/rissarmierung.html">
+                        <div
+                            class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Rissarmierung </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
+                    <a href="/pruefmethoden.html">
+                        <div
+                            class="flex transition-all bg-[#f7931e] hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Prüfmethoden </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
+                    <a href="/putzarbeiten-rissursachen.html">
+                        <div
+                            class="flex transition-all bg-[#f7931e] hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Putzarbeiten / Rissursachen </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
+                    <a href="/algenbekaempfung.html">
+                        <div
+                            class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Algenbekämpfung </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
+                    <a href="/graffitibekaempfung.html">
+                        <div
+                            class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Graffitibekämpfung </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
                 </div>
 
                 <div class=" rounded-md overflow-hidden borderWidth2 relative text-black w-full bg-[#f8a322] p-7">
                     <div class="relative">
                         <h2 class="text-3xl italic">Professionelle
                             Balkonsanierung
-                            </h2>
-                        <p class="mb-6 mt-3">Professionelle Balkoninstandsetzung erfordert nicht nur ein hohes Maß an Fachkenntnissen und Erfahrung, insbesondere bei der Gestaltung von Anschlussdetails, sondern auch eine gründliche Analyse der baulichen Gegebenheiten, um eine maßgeschneiderte Lösung zu bieten, die den spezifischen Anforderungen Ihres Balkons gerecht wird.
+                        </h2>
+                        <p class="mb-6 mt-3">Professionelle Balkoninstandsetzung erfordert nicht nur ein hohes Maß an
+                            Fachkenntnissen und Erfahrung, insbesondere bei der Gestaltung von Anschlussdetails, sondern
+                            auch eine gründliche Analyse der baulichen Gegebenheiten, um eine maßgeschneiderte Lösung zu
+                            bieten, die den spezifischen Anforderungen Ihres Balkons gerecht wird.
                         </p>
                         <a href="">
                             <button
-                                class="text-[#f8a322] flex items-center gap-2 transition-all duration-500 hover:gap-4 font-semibold bg-white rounded-full px-6 py-3 hover:text-[#7c6498]">MEHR ERFAHREN <i class="fa-solid fa-angle-right text-sm"></i></button>
+                                class="text-[#f8a322] flex items-center gap-2 transition-all duration-500 hover:gap-4 font-semibold bg-white rounded-full px-6 py-3 hover:text-[#7c6498]">MEHR
+                                ERFAHREN <i class="fa-solid fa-angle-right text-sm"></i></button>
                         </a>
                     </div>
                 </div>
@@ -236,10 +244,13 @@
                     <div class="relative">
                         <h2 class="text-3xl italic">Professionelle
                             Balkonabdichtung</h2>
-                        <p class="mb-6 mt-3">Abdichtung gegen Feuchtigkeit ist eine häufig erforderliche Sanierungsmaßnahme. Feuchtigkeit tritt meist in Form von Niederschlägen auf. Wir sanieren auch Parkhauser und Garagen inkl. Strassen- bzw. Parkplatzmarkierungen.                        </p>
+                        <p class="mb-6 mt-3">Abdichtung gegen Feuchtigkeit ist eine häufig erforderliche
+                            Sanierungsmaßnahme. Feuchtigkeit tritt meist in Form von Niederschlägen auf. Wir sanieren
+                            auch Parkhauser und Garagen inkl. Strassen- bzw. Parkplatzmarkierungen. </p>
                         <a href="">
                             <button
-                                class="text-[#7c6498] flex items-center gap-2 transition-all duration-500 hover:gap-4 font-semibold bg-white rounded-full px-6 py-3 hover:text-[#f8931f]">MEHR ERFAHREN <i class="fa-solid fa-angle-right text-sm"></i></button>
+                                class="text-[#7c6498] flex items-center gap-2 transition-all duration-500 hover:gap-4 font-semibold bg-white rounded-full px-6 py-3 hover:text-[#f8931f]">MEHR
+                                ERFAHREN <i class="fa-solid fa-angle-right text-sm"></i></button>
                         </a>
                     </div>
                 </div>
