--- a/beschreibung-der-problemfelder.html
+++ b/beschreibung-der-problemfelder.html
@@ -155,22 +155,28 @@
             </div>
             <div class="lg:max-w-[30%] w-full flex flex-col gap-5">
 
-                <div class=" rounded-md">
-                    <div
-                        class="flex transition-all bg-[#f7931e] hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Balkonabdichtung </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div
-                        class="flex transition-all bg-[#f7931e] hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p> Detailinformationen zu Balkonabdichtungen </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div
-                        class="flex  transition-all bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p> Beschreibun der Problemfelder... </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
+                <div class=" rounded-md overflow-hidden">
+                    <a href="/balkonabdichtung.html">
+                        <div
+                            class="flex  transition-all bg-[#f7931e] hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p> Balkonabdichtung </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
+                    <a href="Detailinformationen-zu-Balkonabdichtungen.html">
+                        <div
+                            class="flex transition-all bg-[#f7931e]  hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Detailinformationen zu Balkonabdichtungen </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
+                    <a href="/beschreibung-der-problemfelder.html">
+                        <div
+                            class="flex transition-all  bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Beschreibun der Problemfelder... </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
                 </div>
 
                 <div class=" rounded-md overflow-hidden borderWidth2 relative text-black w-full bg-[#f8a322] p-7">
