--- a/putzarbeiten-rissursachen.html
+++ b/putzarbeiten-rissursachen.html
@@ -149,14 +149,16 @@
                 <div class="grid md:grid-cols-2 grid-cols-1 gap-8">
 
                     <div class="">
-                        <img src="/Docs/Assets/Images/putzarbeiten-rissursachen/img1.webp" class="w-full rounded-md" alt="">
+                        <img src="/Docs/Assets/Images/putzarbeiten-rissursachen/img1.webp" class="w-full rounded-md"
+                            alt="">
                         <p class="text-[#4f4856] pt-4">Stephanstr. 18, 10559 Berlin-Wedding,
                             Strassenfassade, Fassadensanierung
 
                         </p>
                     </div>
                     <div class="">
-                        <img src="/Docs/Assets/Images/putzarbeiten-rissursachen/img2.webp" class="w-full rounded-md" alt="">
+                        <img src="/Docs/Assets/Images/putzarbeiten-rissursachen/img2.webp" class="w-full rounded-md"
+                            alt="">
                         <p class="text-[#4f4856] pt-4">Karl-Marx-Str. 215, Braunschweiger Str. 84 in 12055
                             Berlin-Neukölln, komplett mit Armierungsputz und Gewebeeinlage armiert ca. 1.200,00 m²
 
@@ -190,46 +192,62 @@
             </div>
             <div class="lg:max-w-[30%] w-full flex flex-col gap-5">
 
-                <div class=" rounded-md">
-                    <div
-                        class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Beschichtungssysteme </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div
-                        class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Rissarmierung </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div
-                        class="flex transition-all bg-[#f7931e] hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Prüfmethoden </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div
-                        class="flex transition-all bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Putzarbeiten / Rissursachen </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div
-                        class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Algenbekämpfung </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div
-                        class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Graffitibekämpfung </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
+                <div class=" rounded-md overflow-hidden">
+                    <a href="/beschichtungssysteme.html">
+                        <div
+                            class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Beschichtungssysteme </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
+                    <a href="/rissarmierung.html">
+                        <div
+                            class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Rissarmierung </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
+                    <a href="/pruefmethoden.html">
+                        <div
+                            class="flex transition-all bg-[#f7931e] hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Prüfmethoden </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
+                    <a href="/putzarbeiten-rissursachen.html">
+                        <div
+                            class="flex transition-all bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Putzarbeiten / Rissursachen </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
+                    <a href="/algenbekaempfung.html">
+                        <div
+                            class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Algenbekämpfung </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
+                    <a href="/graffitibekaempfung.html">
+                        <div
+                            class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Graffitibekämpfung </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
                 </div>
 
                 <div class=" rounded-md overflow-hidden borderWidth2 relative text-black w-full bg-[#f8a322] p-7">
                     <div class="relative">
                         <h2 class="text-3xl italic">Professional balcony renovation</h2>
-                        <p class="mb-6 mt-3">Professionelle Balkoninstandsetzung erfordert nicht nur ein hohes Maß an Fachkenntnissen und Erfahrung, insbesondere bei der Gestaltung von Anschlussdetails, sondern auch eine gründliche Analyse der baulichen Gegebenheiten, um eine maßgeschneiderte Lösung zu bieten, die den spezifischen Anforderungen Ihres Balkons gerecht wird.</p>
+                        <p class="mb-6 mt-3">Professionelle Balkoninstandsetzung erfordert nicht nur ein hohes Maß an
+                            Fachkenntnissen und Erfahrung, insbesondere bei der Gestaltung von Anschlussdetails, sondern
+                            auch eine gründliche Analyse der baulichen Gegebenheiten, um eine maßgeschneiderte Lösung zu
+                            bieten, die den spezifischen Anforderungen Ihres Balkons gerecht wird.</p>
                         <a href="">
                             <button
-                                class="text-[#f8a322] flex items-center gap-2 transition-all duration-500 hover:gap-4 font-semibold bg-white rounded-full px-6 py-3 hover:text-[#7c6498]">MEHR ERFAHREN <i class="fa-solid fa-angle-right text-sm"></i></button>
+                                class="text-[#f8a322] flex items-center gap-2 transition-all duration-500 hover:gap-4 font-semibold bg-white rounded-full px-6 py-3 hover:text-[#7c6498]">MEHR
+                                ERFAHREN <i class="fa-solid fa-angle-right text-sm"></i></button>
                         </a>
                     </div>
                 </div>
@@ -238,10 +256,13 @@
                     <div class="relative">
                         <h2 class="text-3xl italic">Professionelle
                             Balkonabdichtung</h2>
-                        <p class="mb-6 mt-3">Abdichtung gegen Feuchtigkeit ist eine häufig erforderliche Sanierungsmaßnahme. Feuchtigkeit tritt meist in Form von Niederschlägen auf. Wir sanieren auch Parkhauser und Garagen inkl. Strassen- bzw. Parkplatzmarkierungen.</p>
+                        <p class="mb-6 mt-3">Abdichtung gegen Feuchtigkeit ist eine häufig erforderliche
+                            Sanierungsmaßnahme. Feuchtigkeit tritt meist in Form von Niederschlägen auf. Wir sanieren
+                            auch Parkhauser und Garagen inkl. Strassen- bzw. Parkplatzmarkierungen.</p>
                         <a href="">
                             <button
-                                class="text-[#7c6498] flex items-center gap-2 transition-all duration-500 hover:gap-4 font-semibold bg-white rounded-full px-6 py-3 hover:text-[#f8931f]">MEHR ERFAHREN <i class="fa-solid fa-angle-right text-sm"></i></button>
+                                class="text-[#7c6498] flex items-center gap-2 transition-all duration-500 hover:gap-4 font-semibold bg-white rounded-full px-6 py-3 hover:text-[#f8931f]">MEHR
+                                ERFAHREN <i class="fa-solid fa-angle-right text-sm"></i></button>
                         </a>
                     </div>
                 </div>
