--- a/rissarmierung.html
+++ b/rissarmierung.html
@@ -111,39 +111,49 @@
             </div>
             <div class="lg:max-w-[30%] w-full flex flex-col gap-5">
 
-                <div class=" rounded-md">
-                    <div class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Everything from one source </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div class="flex transition-all bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Schnelldienst (fahrende Werkstätten) </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Kostenfreie Aufmasserstellung </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Farbgestaltung Oder Farbmuster </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Fensterwartungsverträge </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Beratung für eine optimale Sanierung </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Pauschalfestpreise </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
-                    <div class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
-                        <p>Hausmeisterverträge </p>
-                        <i class="fa-solid fa-angle-right"></i>
-                    </div>
+                <div class=" rounded-md overflow-hidden">
+                    <a href="/beschichtungssysteme.html">
+                        <div
+                            class="flex transition-all bg-[#f7931e] hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Beschichtungssysteme </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
+                    <a href="/rissarmierung.html">
+                        <div
+                            class="flex transition-all bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Rissarmierung </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
+                    <a href="/pruefmethoden.html">
+                        <div
+                            class="flex transition-all bg-[#f7931e] hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Prüfmethoden </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
+                    <a href="/putzarbeiten-rissursachen.html">
+                        <div
+                            class="flex transition-all bg-[#f7931e] hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Putzarbeiten / Rissursachen </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
+                    <a href="/algenbekaempfung.html">
+                        <div
+                            class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Algenbekämpfung </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
+                    <a href="/graffitibekaempfung.html">
+                        <div
+                            class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                            <p>Graffitibekämpfung </p>
+                            <i class="fa-solid fa-angle-right"></i>
+                        </div>
+                    </a>
                 </div>
 
                 <div class=" rounded-md overflow-hidden borderWidth2 relative text-black w-full bg-[#f8a322] p-7">
