I added text to the file

--- a/index.html
+++ b/index.html
@@ -452,13 +452,22 @@
                         <div class="swiper-slide"> <img src="/Docs/Assets/Images/Home/slide4.png" class=" w-full"
                                 alt="">
                         </div>
-                        <div class="swiper-slide"> <img src="/Docs/Assets/Images/Home/slide1.png" class=" w-full"
+                        <div class="swiper-slide"> <img src="/Docs/Assets/Images/Home/slide5.png" class=" w-full"
                                 alt="">
                         </div>
-                        <div class="swiper-slide"> <img src="/Docs/Assets/Images/Home/slide2.png" class=" w-full"
+                        <div class="swiper-slide"> <img src="/Docs/Assets/Images/Home/slide6.png" class=" w-full"
                                 alt="">
                         </div>
-                        <div class="swiper-slide"> <img src="/Docs/Assets/Images/Home/slide3.png" class=" w-full"
+                        <div class="swiper-slide"> <img src="/Docs/Assets/Images/Home/slide7.png" class=" w-full"
+                                alt="">
+                        </div>
+                        <div class="swiper-slide"> <img src="/Docs/Assets/Images/Home/slide8.png" class=" w-full"
+                                alt="">
+                        </div>
+                        <div class="swiper-slide"> <img src="/Docs/Assets/Images/Home/slide9.png" class=" w-full"
+                                alt="">
+                        </div>
+                        <div class="swiper-slide"> <img src="/Docs/Assets/Images/Home/slide10.png" class=" w-full"
                                 alt="">
                         </div>
                     </div>
@@ -824,6 +833,7 @@
             delay: 3000, // Autoplay with a 3-second delay
             disableOnInteraction: false,
         },
+        loop:true,
         pagination: {
             el: ".swiper-pagination",
             clickable: true,
