I added text to the file

--- a/galerie.html
+++ b/galerie.html
@@ -66,11 +66,11 @@
                     <img src="/Docs/Assets/Images/galerie/30.jpg" class="w-full cursor-pointer rounded-md" alt="">
                 </div>
                 
-                <div class="popup " style="display: none;">
-                    <div class="h-screen z-50 w-screen bg-[#000000ce] fixed top-0 left-0  flex items-center justify-center">
-                        <i class="fa-solid fa-x text-white absolute top-8 cursor-pointer p-1 right-20 text-2xl closegallery"></i>
+                <div class="popup superFastFadeIn overflow-hidden" style="display: none;">
+                    <div class="h-screen z-50 w-screen bg-[#000000ce] fixed top-0 left-0 superFastFadeIn flex items-center justify-center">
+                        <i class="fa-solid fa-x text-white absolute top-8 cursor-pointer  p-1 right-20 text-2xl closegallery"></i>
                         <div class="max-w-7xl p-5 w-full mx-auto max-h-[95vh] h-full">
-                            <img src="/Docs/Assets/Images/ueber-uns/img9.jpg" class="w-full z-50 h-full rounded-md object-cover" alt="">
+                            <img src="/Docs/Assets/Images/ueber-uns/img9.jpg" class="w-full superFastFadeIn z-50 h-full rounded-md object-cover" alt="">
                         </div>
                     </div>
                 </div>
